fixtures/frontend/milestone-2/invalid/truthy-falsy-branch-type-mismatch/main.aivi
value ready:Bool = True

value branch =
    ready
     T|> "start"
     F|> 0
